# ai-writer-mvp

./: $CONFIG_FILE  .gitignore  CLAUDE.md  README.md  app_errors.py  fastapi_app.py  imports.txt  mypy.ini  project_real_tree.txt  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  setup.cfg
api/: error_translator.py  model_resource_http_schemas.py  model_resource_reference_service.py  run_batch_store.py  run_http_schemas.py  run_live_store.py  run_outcome.py  run_result_mapper.py  workflow_batch_run_service.py  workflow_canonical_loader.py  workflow_converter.py  workflow_direct_run_service.py  workflow_editor_loader.py  workflow_live_run_service.py  workflow_loader.py  workflow_metadata_io.py  workflow_normalizer.py  workflow_paths.py  workflow_prompt_io.py  workflow_run_inputs.py  workflow_run_result_factory.py  workflow_run_service.py  workflow_sidecar_io.py  workflow_validation_dependency.py  workflow_validation_structure.py  workflow_validation_subgraph.py  workflow_validator.py  workflow_yaml_io.py  workflows.py
backend_workflow_canonical/: __init__.py  app_errors.py  pyproject.toml  workflow_validation_dependency.py  workflow_validation_execution_graph.py  workflow_validation_structure.py  workflow_validation_subgraph.py  workflow_validator.py
backend_workflow_engine/: __init__.py  engine.py  engine_errors.py  engine_execution_loop.py  engine_graph.py  engine_node_runners.py  engine_prompt_window.py  engine_runtime.py  engine_step_builders.py  execution_types.py  pyproject.toml
config/: model_resources.json
contracts/: __init__.py  model_resource_contracts.py  pyproject.toml  run_contracts.py  step_projections.py  workflow_contracts.py  workflow_sidecar_contracts.py
core/: engine.py  engine_errors.py  engine_execution_loop.py  engine_graph.py  engine_node_runners.py  engine_prompt_window.py  engine_runtime.py  engine_step_builders.py  execution_types.py  llm.py  model_resource_registry.py  output_exporter.py
doc/: 01-repo-audit.md  02-requirement-clarification.md  boundary_contract_tests_guide.md  current_architecture_baseline.md  frontend_interaction_user_manual.md  frontend_workflow_page_responsibility_map.md  next_docs_plan.md  package_release_and_ci_matrix.md  project-code-map.md  project_operation_commands.md
docs/: ai-writer-mvp → 类 n8n 可视化工作流平台骨架.md  一次性配置：从本地项目到首次推送.md
frontend-react/: eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.js
prompt/: draft.txt  outline.txt  refine.txt
shared/: model_resource_config_shared.py
storage/: model_resource_store.py
tests/: test_backend_package_metadata.py  (+5 more)
(+252 files in other folders)
