[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiwriter-workflow-engine"
version = "0.1.0"
description = "Workflow execution engine for ai-writer backend."
requires-python = ">=3.12"
dependencies = [
  "aiwriter-run-contracts>=0.1.0",
  "langchain-core",
  "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "build>=1.2,<2",
]

[tool.setuptools]
packages = ["backend_workflow_engine"]

[tool.setuptools.package-dir]
backend_workflow_engine = "."
