[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiwriter-run-contracts"
version = "0.1.0"
description = "Run/workflow contract models for ai-writer backend packages."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "build>=1.2,<2",
]

[tool.setuptools]
packages = ["contracts"]

[tool.setuptools.package-dir]
contracts = "."
